# dig-keystore

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md
.config/: nextest.toml
.github/workflows/: publish-npm.yml  publish.yml
docs/resources/: SPEC.md
src/: cipher.rs  error.rs  format.rs  kdf.rs  keystore.rs  lib.rs  opaque.rs  password.rs  signer.rs
src/backend/: file.rs  memory.rs  mod.rs  os_keychain.rs
src/scheme/: bls_signing.rs  l1_wallet_bls.rs  mod.rs
tests/: keystore_branches.rs  opaque_vectors.rs  roundtrip.rs  tamper.rs  vectors.rs  wrong_password.rs
wasm/: Cargo.toml  LICENSE-MIT  package.json
wasm/scripts/: patch-pkg.mjs
wasm/src/: lib.rs
wasm/tests/: opaque_wasm.rs
