[package]
name = "dig-keystore"
version = "0.4.0"
edition = "2021"
description = "Encrypted secret-key storage for DIG Network binaries (BLS signing + L1 wallet keys). AES-256-GCM + Argon2id, typed per-scheme magic files, zeroizing memory hygiene."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DIG-Network/dig-keystore"
homepage = "https://github.com/DIG-Network/dig-keystore"
documentation = "https://docs.rs/dig-keystore"
readme = "README.md"
keywords = ["dig-network", "keystore", "bls", "chia", "encryption"]
categories = ["cryptography::cryptocurrencies"]
# Only ship the library surface to crates.io. Explicit allow-list because the
# repo also tracks build artefacts (target/) and CI workflow files that must
# NOT end up in the published tarball — crates.io rejects > 10 MiB uploads.
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "docs/resources/SPEC.md",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
]

# `dig-keystore-wasm` (dig_ecosystem #147 Phase A) lives in `wasm/` as a SEPARATE
# workspace member rather than a feature on this crate. Reasons:
#   1. This crate's `[lints.rust] unsafe_code = "forbid"` below is a spec-pinned
#      security property (`SPEC.md` §12/§13.2, conformance C-15: "no unsafe code
#      anywhere in the crate"). wasm-bindgen's generated glue is not `forbid`-clean,
#      so it cannot live in this package without weakening that guarantee.
#   2. Matches ecosystem precedent (`chip35_dl_coin`'s `core/` + `wasm/` split).
#   3. `default-members = ["."]` keeps every existing `cargo <cmd>` invocation
#      (this repo's CI, `cargo publish`, dependents' `path = "../dig-keystore"`)
#      operating on ONLY this package, byte-for-byte as before — the wasm crate
#      requires an explicit `-p dig-keystore-wasm` and is opt-in.
# The wasm crate depends on this one via `path = ".."` and wraps the new
# `crate::opaque` module (arbitrary-length password-sealed secrets) — see
# `src/opaque.rs` and `wasm/src/lib.rs`.
[workspace]
members = ["wasm"]
default-members = ["."]

[dependencies]
# Chia ecosystem (maximally re-used per CRATES_SUMMARY.md)
chia-bls = "0.26"

# Encryption primitives
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }

# RNG
rand_core = "0.6"
rand_chacha = "0.3"

# Utilities
crc32fast = "1"
thiserror = "1"
hex = "0.4"
parking_lot = "0.12"

# Optional features
zxcvbn = { version = "3", optional = true }

# OS-native credential store (`os-keychain` feature). Target-gated to Windows /
# macOS — the only platforms whose credential store gates access per-application
# (see `src/backend/os_keychain.rs` module docs). `default-features = false`
# selects only the native backends, so no dbus/libsecret system libraries are
# pulled and CI stays free of system deps. Never compiled on Linux or wasm.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
keyring = { version = "3", default-features = false, features = [
    "windows-native",
    "apple-native",
], optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
rand = "0.8"
# Only used by the `L1WalletBls` golden cross-derivation test (regression for
# dig_ecosystem #64/#57) to independently reproduce the Chia-standard
# `mnemonic -> mnemonic.to_seed("") -> SecretKey::from_seed(seed)` chain that
# `dig-l1-wallet::keystore::mnemonic::derive_master_key_from_mnemonic` uses.
bip39 = "2.0"

[features]
default = ["file-backend"]

# Ships FileBackend (filesystem KeychainBackend).
file-backend = []

# Ships OsKeychainBackend (OS-native credential store: Windows Credential
# Manager / macOS Keychain via `keyring`; other targets fall back to the file
# backend). The `keyring` dependency is target-gated so it never compiles on
# Linux or wasm.
os-keychain = ["dep:keyring"]

# Enables Password::strength via zxcvbn.
password-strength = ["dep:zxcvbn"]

# Exposes MemoryBackend + TEST_PASSWORD helpers for use in dependent crates' tests.
testing = []

# Import/export in Ethereum keystore v4 JSON format (EIP-2335).
# Not implemented in v0.1; trait stubs exist.
eip2335 = []

# Import Chia `.keychain` files (seed-based).
# Not implemented in v0.1; trait stubs exist.
chia-keychain = []

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[test]]
name = "roundtrip"
path = "tests/roundtrip.rs"
required-features = ["testing"]

[[test]]
name = "wrong_password"
path = "tests/wrong_password.rs"
required-features = ["testing"]

[[test]]
name = "tamper"
path = "tests/tamper.rs"
required-features = ["testing"]

[[test]]
name = "vectors"
path = "tests/vectors.rs"
required-features = ["testing"]

[[test]]
name = "keystore_branches"
path = "tests/keystore_branches.rs"
required-features = ["testing"]
